--- a/pkg/RNetLogo/inst/java/java_v5/eclipse_project/RNetLogo/.classpath
+++ b/pkg/RNetLogo/inst/java/java_v5/eclipse_project/RNetLogo/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
-	<classpathentry kind="lib" path="C:/Programme/NetLogo 5.0beta3/NetLogo.jar"/>
+	<classpathentry kind="lib" path="C:/Programme/NetLogo 5.0RC5/NetLogo.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
