--- a/pkg/RNetLogo/DESCRIPTION
+++ b/pkg/RNetLogo/DESCRIPTION
@@ -2,8 +2,8 @@ Package: RNetLogo
 Title: Provides an interface to the agent-based modelling plattform NetLogo
 Version: 0.9.2
 Date: 2012-01-08
-Author: Jan Thiele
-Maintainer: Jan Thiele <jthiele@gwdg.de>
+Author: Jan C. Thiele
+Maintainer: Jan C. Thiele <jthiele@gwdg.de>
 Description: Interface to embed NetLogo into the R environment with headless (no GUI) and interactive GUI mode. 
         Provides functions to load models, execute commands and to get values from reporters. 
         Equivalent to the NetLogo Mathematica Link http://ccl.northwestern.edu/netlogo/docs/mathematica.html
