--- a/pkg/RNetLogo/DESCRIPTION
+++ b/pkg/RNetLogo/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: RNetLogo
 Version: 0.9.4
-Date: 2012-12-31
+Date: 2013-01-02
 Title: Provides an interface to the agent-based modelling platform NetLogo
 Author: Jan C. Thiele
 Maintainer: Jan C. Thiele <jthiele@gwdg.de>
 Description: Interface to use and access NetLogo from R using either headless (no GUI) or interactive GUI mode. Provides functions to load models, execute commands, and get values from reporters. Mostly analogous to the NetLogo Mathematica Link http://ccl.northwestern.edu/netlogo/docs/mathematica.html
 Depends: R (>= 2.12.1), rJava
-Suggests: igraph
+Suggests: igraph, parallel
 Imports: rJava (>= 0.6-3)
 SystemRequirements: Java (>= 5.0), NetLogo (>= 4.0)
 License: GPL-2
