--- a/pkg/RNetLogo/DESCRIPTION
+++ b/pkg/RNetLogo/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: RNetLogo
-Version: 0.9-6
-Date: 2013-04-24
+Version: 0.9-7
+Date: 2013-09-19
 Title: Provides an interface to the agent-based modelling platform NetLogo
 Author: Jan C. Thiele
-Maintainer: Jan C. Thiele <jthiele@gwdg.de>
-Description: Interface to use and access NetLogo from R using either headless (no GUI) or interactive GUI mode. Provides functions to load models, execute commands, and get values from reporters. Mostly analogous to the NetLogo Mathematica Link http://ccl.northwestern.edu/netlogo/docs/mathematica.html
+Maintainer: Jan C. Thiele <Jan-Christoph.Thiele@forst.uni-goettingen.de>
+Description: Interface to use and access Wilensky's NetLogo (Wilensky 1999) from R using either headless (no GUI) or interactive GUI mode. Provides functions to load models, execute commands, and get values from reporters. Mostly analogous to the NetLogo Mathematica Link http://ccl.northwestern.edu/netlogo/docs/mathematica.html
 Depends: R (>= 2.12.1), rJava
 Suggests: igraph, parallel
 Imports: rJava (>= 0.6-3)
