--- a/pkg/RNetLogo/DESCRIPTION
+++ b/pkg/RNetLogo/DESCRIPTION
@@ -5,9 +5,8 @@ Title: Provides an interface to the agent-based modelling platform NetLogo
 Author: Jan C. Thiele
 Maintainer: Jan C. Thiele <Jan-Christoph.Thiele@forst.uni-goettingen.de>
 Description: Interface to use and access Wilensky's NetLogo (Wilensky 1999) from R using either headless (no GUI) or interactive GUI mode. Provides functions to load models, execute commands, and get values from reporters. Mostly analogous to the NetLogo Mathematica Link http://ccl.northwestern.edu/netlogo/docs/mathematica.html
-Depends: R (>= 2.12.1)
+Depends: R (>= 2.12.1), rJava (>= 0.6-3)
 Suggests: igraph, parallel
-Imports: rJava (>= 0.6-3)
 SystemRequirements: Java (>= 5.0), NetLogo (>= 4.0)
 License: GPL-2
 LazyLoad: yes
