--- a/pkg/RNetLogo/DESCRIPTION
+++ b/pkg/RNetLogo/DESCRIPTION
@@ -4,7 +4,7 @@ Date: 2016-01-25
 Title: Provides an Interface to the Agent-Based Modelling Platform NetLogo
 Author: Jan C. Thiele
 Maintainer: Jan C. Thiele <rnetlogo@gmx.de>
-Description: Interface to use and access Wilensky's NetLogo (Wilensky 1999) from R using either headless (no GUI) or interactive GUI mode. Provides functions to load models, execute commands, and get values from reporters. Mostly analogous to the NetLogo Mathematica Link http://ccl.northwestern.edu/netlogo/docs/mathematica.html
+Description: Interface to use and access Wilensky's NetLogo (Wilensky 1999) from R using either headless (no GUI) or interactive GUI mode. Provides functions to load models, execute commands, and get values from reporters. Mostly analogous to the NetLogo Mathematica Link http://ccl.northwestern.edu/netlogo/docs/mathematica.html.
 Depends: R (>= 3.2.3), rJava (>= 0.9-8), igraph
 Suggests: parallel
 SystemRequirements: Java (>= 8.0), NetLogo (>= 5.3)
